[gd_scene load_steps=4 format=3 uid="uid://dxbm6pip3ibt7"]

[ext_resource type="Script" path="res://TEST_ZONE/color_block.gd" id="1_hkpbp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_48ymb"]
bg_color = Color(1, 1, 1, 1)
border_color = Color(1, 1, 1, 1)
shadow_color = Color(0, 0, 0, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6q1oo"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(1, 1, 1, 1)

[node name="ColorBlock" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_48ymb")
script = ExtResource("1_hkpbp")

[node name="Border" type="Panel" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_6q1oo")

[node name="CodeManager" type="Control" parent="."]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
clip_children = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="Hex" type="Label" parent="CodeManager"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_font_sizes/font_size = 35
text = "FFFFFF"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 1

[node name="Rgb" type="Label" parent="CodeManager"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_font_sizes/font_size = 20
text = "

255 255 255"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="resized" from="." to="." method="_on_resized"]
